@@ -1,11 +1,17 @@
+2002-10-02 grondo
+	* hostlist.c: properly handle deletion of unsuffixed hosts (pdsh/120)
+	* opt.c: Abort when -x option given but hostlist_delete() returns 0
+	* Makefile.am, configure.ac: only need READLINE_LIBS for pdsh binary
+	* Tagged pdsh-1-7-5chaos
+
 2002-09-27 garlick
 	* Added support for readline in interactive mode if found.
 	* Taggged pdsh-1-7-4chaos
 
 2002-09-27 grondo
 	* Make-rpm.mk: Updated rpm target for compatibility with automake
-	* pdsh.1.in, pdcp.1.in: Improve documentation of 
-	  hostname range handling (gnat pdsh/97)
+	* pdsh.1.in, pdcp.1.in: Improve documentation of hostname 
+	  range handling (gnat pdsh/97)
 
 2002-09-26 grondo
 	* configure.ac: workaround autoconf-2.53 bug affecting improper
